darker red hover, openmodal for inventory/orders fixed, checked truncation

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -22,6 +22,10 @@ body.login-page {
 	background-color: #3d843f;
 }
 
+.delete-button:hover {
+	background-color: #8a0000 !important;
+}
+
 .sidebar {
 	width: 250px;
 	height: 100%;
